apply plugin: 'java'

version '1.33'

sourceCompatibility = 1.9

repositories {
	jcenter()
}

dependencies {
	compile 'com.google.guava:guava:25.0-jre'
	compile 'net.dv8tion:JDA:3.8.3_463'
}